--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Adventure Game</title>
+</head>
+<body>
+	<h1>Welcome to the Adventure Game!</h1>
+	<p>You find yourself in a dark room. There is a door to the north and a window to the east.</p>
+	<p>What do you want to do?</p>
+	<ul>
+		<li><a href="door.html">Open the door</a></li>
+		<li><a href="window.html">Look out the window</a></li>
+	</ul>
+</body>
+</html>
