--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Adventure Game</title>
 </head>
 <body>
-	<h1>Welcome to the Adventure Game!</h1>
+	<h1>A quick Adventure Game</h1>
 	<p>You find yourself in a dark room. There is a door to the north and a window to the east.</p>
 	<p>What do you want to do?</p>
 	<ul>
